<resources>
    <string name="app_name">ManageTournament</string>
    <string name="welcome">Welcome to your tournament manager</string>

    <string name="email">Enter your email</string>
    <string name="register_user">REGISTER</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Already Registered? Sign In</string>
    <string name="register_here">Please Register</string>


    <string name="sign_up">Do not have account? Click here to register</string>
    <string name="Sign_in">SIGN IN</string>
    <string name="login_here">Please login</string>

    <string name="large_text">Large text</string>
    <string name="logout">LOGOUT</string>

    <string name="enterName">Enter user name</string>
    <string name="enterUserName">Enter your full name</string>

    <string name="save">Save</string>
    <string name="tournament_name">Enter tournament name</string>
    <string name="tournament_location">Enter tournament location</string>
    <string name="add_tournament">Add Tournament</string>
    <string name="starting_date">Tournament start date</string>
    <string name="end_date">Tournament end date</string>
    <string name="selectType">Select Tournament Type</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="todo">TODO</string>


    <array name="asides">
        <item>5 aside</item>
        <item>7 aside</item>
        <item>11 aside</item>
    </array>


    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_again">Confirm Password</string>
    <string name="prompt_msg">Type a message</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_send">Send</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password too short or does not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sample_message">Hello!</string>
    <string name="title_activity_user_navigation">UserNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>


    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_home_team_s_name_here">Enter home team\'s name here</string>
    <string name="enter_away_team_s_name_here">Enter away team\'s name here</string>
    <string name="view_info">view_info</string>
    <string name="select_start_data">Start date</string>
    <string name="select_end_data">End date</string>
    <string name="view_your_tournaments">View your tournaments</string>
    <string name="click_below_to_select_dates">Click below to select dates</string>


</resources>
