<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGreen"
    android:gravity="top"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:clickable="true"
    tools:context=".TournamentActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ball" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <AutoCompleteTextView
            android:id="@+id/tournament_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textIsSelectable="false" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/tournament_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tournament_location"
            android:imeActionId="100"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/date_selection_message"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:text="@string/click_below_to_select_dates"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:textColor="@color/lightBlue"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="horizontal" >
    <Button
        android:id="@+id/select_start_date"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/select_start_data"
        android:textColor="@color/lightBlue"
        android:onClick="setDate"
        android:textStyle="bold" />

    <Button
        android:id="@+id/select_end_date"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/select_end_data"
        android:layout_margin="6dp"
        android:textColor="@color/lightBlue"
        android:onClick="setDate"
        android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/view_info"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:onClick="viewTournaments"
        android:text="@string/view_your_tournaments"
        android:textColor="@color/lightBlue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_tournament"
        style="?android:textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:text="@string/add_tournament"
        android:textColor="@color/lightBlue"
        android:onClick="newTournament"
        android:textStyle="bold"

        tools:ignore="OnClick" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    </android.support.v4.widget.NestedScrollView>



</LinearLayout>
